@@ -307,6 +307,14 @@ common skills.  The item created may be made of a material specified, or automat
 crafted by a random material valid to the appropriate skill.  You can also specify \
 the destination of the items, whether it be the room, your inventory, or an xml file.
 
+MPOSSESS=ARCHON_MATRIX_POSSESS
+ARCHON_MATRIX_POSSESS=<ABILITY>\
+Usage    : MPOSSESS [PLAYER NAME]\n\r\
+Example  : mpossess bob\n\r\
+This skill will allow you automatically possess a new mob in the same room as the \
+target player whenever the target moves to a new room.  Just like possess, use QUIT \
+to shut it down.
+
 BANISH=<ABILITY>\
 Usage    : BANISH [PLAYER NAME] ([MAP ROOM]) (RL TIME)\n\r\
 Example  : banish gunther\n\r\
